--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "resturant",
+  "homepage": "https://SaradariDeveloper.github.io/Restaurant",
+  "name": "Restaurant",
   "private": true,
   "version": "0.0.0",
   "type": "module",
